patient -> ms-patient

--- a/ms-patient.properties
+++ b/ms-patient.properties
@@ -4,7 +4,7 @@ management.endpoints.web.exposure.include=*
 management.endpoints.shutdown.enabled=true
 
 info.app.name=Patient Microservice
-info.app.description=HealthCare Application - Patient
+info.app.description=HealthCare Application - MS Patient
 info.app.version=1.0.0
 management.info.env.enabled=true
 
