--- a/ms-patient.properties
+++ b/ms-patient.properties
@@ -12,3 +12,7 @@ eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
+
+spring.datasource.url=jdbc:mysql://localhost:3308/patientdb
+spring.datasource.username=root
+spring.datasource.password=azerty
