--- a/ms-patient.properties
+++ b/ms-patient.properties
@@ -16,3 +16,6 @@ eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
 spring.datasource.url=jdbc:mysql://localhost:3308/patientdb
 spring.datasource.username=root
 spring.datasource.password=azerty
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
