--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -1,5 +1,9 @@
 server.port=8070
 
+management.endpoints.web.exposure.include=*
+management.endpoints.shutdown.enabled=true
+management.info.env.enabled=true
+
 eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
