--- a/web-app.properties
+++ b/web-app.properties
@@ -17,3 +17,6 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
+
+#spring.security.user.name=admin
+#spring.security.user.password=admin
