--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -6,11 +6,15 @@ management:
     web:
       exposure:
         include: "*"
-    shutdown:
+  health:
+    readiness-state:
+      enable: true
+    liveness-state:
       enabled: true
-  info:
-    env:
-      enabled: true
+  endpoint:
+    health:
+      probes:
+        enabled: true
 
 eureka:
   instance:
