--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -23,4 +23,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://eurekaserver:8070/eureka/
