--- a/ms-patient.yml
+++ b/ms-patient.yml
@@ -24,8 +24,8 @@ eureka:
   client:
     registerWithEureka: true
     fetchRegistry: true
-    service-url:
-      defaultZone: http://localhost:8070/eureka/
+    serviceUrl:
+      defaultZone: http://eurekaserver:8070/eureka/
 
 spring:
   datasource:
