--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -18,7 +18,7 @@ management:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: eurekaserver
   client:
     registerWithEureka: false
     fetchRegistry: false
