--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -20,7 +20,7 @@ eureka:
   instance:
     hostname: eurekaserver
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    register-with-eureka: false
+    fetch-registry: false
     serviceUrl:
       defaultZone: http://eurekaserver:8070/eureka/
