--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -8,7 +8,7 @@ management:
         include: "*"
   health:
     readiness-state:
-      enable: true
+      enabled: true
     liveness-state:
       enabled: true
   endpoint:
