--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -18,9 +18,9 @@ management:
 
 eureka:
   instance:
-    hostname: eurekaserver
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://eurekaserver:8070/eureka/
+      defaultZone: http://localhost:8070/eureka/
