--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -1,11 +1,11 @@
 server:
   port: 8070
 
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 #  health:
 #    readiness-state:
 #      enabled: true
