--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -6,15 +6,15 @@ management:
     web:
       exposure:
         include: "*"
-#  health:
-#    readiness-state:
-#      enabled: true
-#    liveness-state:
-#      enabled: true
-#  endpoint:
-#    health:
-#      probes:
-#        enabled: true
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
+  endpoint:
+    health:
+      probes:
+        enabled: true
 
 eureka:
   instance:
