--- a/ms-patient.yml
+++ b/ms-patient.yml
@@ -29,7 +29,7 @@ eureka:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3308/patientdb
+    url: jdbc:mysql://patientdb:3308/patientdb
     username: root
     password: azerty
     driver-class-name: com.mysql.cj.jdbc.Driver
