--- a/web-app.yml
+++ b/web-app.yml
@@ -28,6 +28,8 @@ eureka:
       defaultZone: http://eurekaserver:8070/eureka/
 
 spring:
+  profiles:
+    active: default
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
