--- a/web-app.yml
+++ b/web-app.yml
@@ -29,7 +29,7 @@ eureka:
 
 spring:
   profiles:
-    active: default
+    active: ""
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
