--- a/ms-patient.yml
+++ b/ms-patient.yml
@@ -35,5 +35,5 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
