--- a/ms-patient.yml
+++ b/ms-patient.yml
@@ -30,7 +30,8 @@ eureka:
 
 spring:
   datasource:
-    url: jdbc:mysql://patientdb:3306/patientdb
+    url: jdbc:mysql://localhost:3308/patientdb
+    #url: jdbc:mysql://patientdb:3306/patientdb
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
